--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="./index.css">
 	<title>Full Stack Web Developer</title>
 </head>
-<body class="bg-light vh-100">
+<body class="bg-light">
 	<!--Main section-->
 	<main class="container-fluid">
 
@@ -31,10 +31,10 @@
 		<!-- end of navbar -->
 
 		<!-- Start of Landing section -->
-		<section id="landing" class="container-fluid mt-3 mb-5 text-center rounded p-3 bg-dark">
-			<div class="row d-flex align-items-center py-5">
+		<section id="landing" class="container-fluid mt-3 mb-5 text-center rounded p-3 bg-dark d-flex justify-content-center">
+			<div class="row d-flex align-items-center">
 				<div class="col-md-6 order-2 order-md-1 text-light">
-					<div class="mt-3 mt-md-0">
+					<div class="mt-5 mt-md-0">
 						<h4 class="mb-2">Hi!</h4> <h1 class="mt-4"><strong>I am Giovanni</strong></h1><h4>a Full stack Web developer..</h4>
 						<div id="icon" class="container-fluid d-flex justify-content-center">
 							<a href="https://www.facebook.com/gsmbabies" target="_blank">
@@ -48,14 +48,13 @@
 				</div>
 				<div class="col-md-6 order-1 order-md-2">
 					<img src="./me.jpg" class="img-thumbnail rounded-circle w-50">
-
 				</div>
 			</div>
 		</section>
 		<!-- End of Landing section -->
 
 		<!-- Start of Projects section -->
-		<section id="projects" class="container-fluid mt-5 text-center">
+		<section id="projects" class="container-fluid mt-2 text-center">
 			<h1>Projects</h1>
 			<div class="row p-1 gap-3 gap-md-0">
 				<!-- project 1 -->
@@ -101,10 +100,10 @@
 		<!-- End of Projects section -->
 
 		<!-- Start of Tools section  -->
-		<section id="tools" class="container-fluid text-center my-5">
+		<section id="tools" class="container-fluid text-center my-1">
 			<h1 class="mt-5 text-center">Tools</h1>
 
-		    <div id="other-tools" class="row bg-light mx-auto mt-5 p-2">
+		    <div id="other-tools" class="row bg-light mx-auto mt-2 p-2">
 
 		    	<div class="col-lg-4">
 		    		<h2>Front End</h2>
@@ -142,7 +141,7 @@
 		<!-- End of Tools section -->
 
 		<!-- Start of Contacts section -->
-		<section id="contacts" class="my-5">
+		<section id="contacts" class="my-2 h-100">
 			<div id="contact-section" class="container-fluid bg-dark p-3 text-white">
 				<h2 class="text-center">Contact</h2>
 				<div class="row mt-3 d-flex justify-content-center">
