--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<main class="container-fluid">
 
 		<!-- Start of navbar -->
-		<nav class="sticky-top navbar navbar-expand-lg navbar-light bg-white shadow p-1">
-		  <a class="navbar-brand" href="#landing">Giovanni</a>
+		<nav class="sticky-top navbar navbar-expand-lg navbar-light bg-white shadow py-1">
+		  <a class="navbar-brand px-2" href="#landing">Giovanni</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -24,6 +24,7 @@
 		    <div class="container-fluid navbar-nav d-flex justify-content-end" id="navBar">
 		      <a class="nav-link active ms-5" href="#landing">Home <span class="sr-only d-none">(current)</span></a>
 		      <a class="nav-link active ms-5" href="#projects">Projects</a>
+		      <a class="nav-link active ms-5" href="#tools">Tools</a>
 		      <a class="nav-link active ms-5" href="#contacts">Contacts</a>
 		    </div>
 		  </div>
@@ -58,7 +59,7 @@
 		<!-- End of Landing section -->
 
 		<!-- Start of Projects section -->
-		<section id="projects" class="container-fluid mt-2 text-center">
+		<section id="projects" class="container-fluid mt-2 text-center d-flex flex-column justify-content-center">
 			<h1>Projects</h1>
 			<div class="row p-1 gap-3 gap-md-0">
 				<!-- project 1 -->
@@ -104,10 +105,9 @@
 		<!-- End of Projects section -->
 
 		<!-- Start of Tools section  -->
-		<section id="tools" class="container-fluid text-center my-1">
-			<h1 class="mt-5 text-center">Tools</h1>
-
-		    <div id="other-tools" class="row bg-light mx-auto mt-2 p-2">
+		<section id="tools" class="container-fluid text-center d-flex flex-column justify-content-center">
+			<h1 class="text-center">Tools</h1>
+		    <div id="other-tools" class="row bg-light mx-auto mt-3 p-2">
 
 		    	<div class="col-lg-4">
 		    		<h2>Front End</h2>
@@ -200,6 +200,23 @@
 		</section>
 		<!-- End of Contacts section -->
 
+		<!-- footer start -->
+		<footer class="d-flex justify-content-between align-items-center p-1 bg-light  text-dark mt-4">
+			<span>© 2023 Francisco</span>
+			<span class="d-flex gap-4">
+				<a href="https://www.facebook.com/gsmbabies" target="_blank">
+					<div class="bg-light vertical-align-center rounded-circle p-1">
+						<svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 512 512" class=""><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"/></svg>
+					</div>	
+				</a>
+				<a href="https://www.instagram.com/gsm.babies28/" target="_blank">
+					<div class="bg-light vertical-align-center rounded-circle p-1">
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
+					</div>
+				</a>
+			</span>
+		</footer>
+		<!-- end of footer -->
 	</main>
 	<!-- End of main section -->
 
