Updated nav link

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 </head>
 <body class="bg-light">
 	<!--Main section-->
-	<main class="container-fluid">
+	<main class="container-fluid d-flex flex-column">
 
 		<!-- Start of navbar -->
 		<nav class="sticky-top navbar navbar-expand-lg navbar-light bg-white shadow py-1">
 		  <a class="navbar-brand px-2" href="#landing">Giovanni</a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
-		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		  <div class="collapse navbar-collapse text-center" id="navbarNavAltMarkup">
 		    <div class="container-fluid navbar-nav d-flex justify-content-end" id="navBar">
 		      <a class="nav-link active ms-5" href="#landing">Home <span class="sr-only d-none">(current)</span></a>
 		      <a class="nav-link active ms-5" href="#projects">Projects</a>
@@ -32,9 +32,9 @@
 		<!-- end of navbar -->
 
 		<!-- Start of Landing section -->
-		<section id="landing" class="container-fluid mt-3 mb-5 text-center rounded p-3 bg-dark d-flex justify-content-center">
+		<section id="landing" class="container-fluid mt-3  text-center rounded p-3 bg-dark d-flex justify-content-center">
 			<div class="row d-flex align-items-center">
-				<div class="col-md-6 order-2 order-md-1 text-light">
+				<div class="col-md-6 text-light order-2 order-md-1">
 					<div class="mt-5 mt-md-0">
 						<h4 class="mb-2">Hi!</h4> <h1 class="mt-4"><strong>I am Giovanni</strong></h1><h4>a Full stack Web developer..</h4>
 						<div id="icons" class="container-fluid d-flex justify-content-center gap-5">
@@ -59,7 +59,7 @@
 		<!-- End of Landing section -->
 
 		<!-- Start of Projects section -->
-		<section id="projects" class="container-fluid mt-2 text-center d-flex flex-column justify-content-center">
+		<section id="projects" class="container-fluid mt-5 text-center d-flex flex-column justify-content-center">
 			<h1>Projects</h1>
 			<div class="row p-1 gap-3 gap-md-0">
 				<!-- project 1 -->
@@ -105,7 +105,7 @@
 		<!-- End of Projects section -->
 
 		<!-- Start of Tools section  -->
-		<section id="tools" class="container-fluid text-center d-flex flex-column justify-content-center">
+		<section id="tools" class="container-fluid text-center d-flex flex-column justify-content-center mt-5">
 			<h1 class="text-center">Tools</h1>
 		    <div id="other-tools" class="row bg-light mx-auto mt-3 p-2">
 
@@ -201,7 +201,7 @@
 		<!-- End of Contacts section -->
 
 		<!-- footer start -->
-		<footer class="d-flex justify-content-between align-items-center p-1 bg-light  text-dark mt-4">
+		<footer class="d-flex justify-content-between align-items-center p- bg-light  text-dark mt-4">
 			<span>© 2023 Francisco</span>
 			<span class="d-flex gap-4">
 				<a href="https://www.facebook.com/gsmbabies" target="_blank">
