Updated text landing page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<section id="landing" class="container-fluid mt-3  text-center rounded p-3 bg-dark d-flex justify-content-center">
 			<div class="row d-flex align-items-center">
 				<div class="col-md-6 text-light order-2 order-md-1">
-					<div class="mt-5 mt-md-0">
+					<div class="mt-5 mt-md-0 text-warning">
 						<h4 class="mb-2">Hi!</h4> <h1 class="mt-4"><strong>I am Giovanni</strong></h1><h4>a Full stack Web developer..</h4>
 						<div id="icons" class="container-fluid d-flex justify-content-center gap-5">
 							<a href="https://www.facebook.com/gsmbabies" target="_blank">
