--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<main class="container-fluid d-flex flex-column">
 
 		<!-- Start of navbar -->
-		<nav class="sticky-top navbar navbar-expand-lg navbar-light bg-white shadow py-1">
-		  <a class="navbar-brand px-2" href="#landing">Giovanni</a>
+		<nav class="sticky-top navbar navbar-expand-lg navbar-light bg-white shadow py-1 container-fluid">
+		  <a class="navbar-brand px-2 px-md-4" href="#landing"><img src="./images/giovanni-logo-zip-file/png/logo-black.png"  class="img-fluid" width="100" alt=""></a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -38,7 +38,7 @@
 		<!-- end of navbar -->
 
 		<!-- Start of Landing section -->
-		<section id="landing" class="container-fluid mt-3  text-center rounded p-3 bg-dark d-flex justify-content-center">
+		<section id="landing" class="container-fluid  text-center rounded p-3 bg-dark d-flex justify-content-center">
 			
 			<div class="row d-flex align-items-center">
 
@@ -55,17 +55,17 @@
 						<h4>a Full stack Web developer..</h4>
 
 						<div id="icons" class="container-fluid d-flex justify-content-center gap-5 mt-4">
-							<a href="https://www.facebook.com/gsmbabies" target="_blank">
+							<a href="https://www.facebook.com/gsmbabies" target="_blank" class="rounded-circle">
 								<div class="vertical-align-center rounded-circle p-1">
 									<img src="./images/facebook (1).svg" alt="facebook">
 								</div>	
 							</a>
-							<a href="https://www.linkedin.com/in/giovanni-francisco-9216262a1/" target="_blank">
+							<a href="https://www.linkedin.com/in/giovanni-francisco-9216262a1/" target="_blank" class="rounded-circle">
 								<div class="vertical-align-center rounded-circle p-1">
 									<img  src="./images/linkedin-with-circle.svg"/>
 								</div>
 							</a>
-							<a href="https://github.com/gsmbabies28" target="_blank">
+							<a href="https://github.com/gsmbabies28" target="_blank" class="rounded-circle">
 								<div class="vertical-align-center rounded-circle p-1">
 									<img  src="./images/github.svg"/>
 								</div>
@@ -118,11 +118,11 @@
 				<!-- project 1 -->
 				<div class="col-md-4">
 					<div class="card mx-2 h-100">
-					  <img src="https://doreentheexplorer.files.wordpress.com/2016/06/map_of_getafe.png?w=620" class="card-img-top h-50" alt="...">
+					  <img src="./images/rental.png" class="card-img-top h-50" alt="...">
 					  <div class="card-body bg-dark text-light">
-					    <h5 class="card-title text-warning">Digitized Map of Getafe</h5>
-					    <p class="card-text">Digitized map of Getafe and Approved the FLUP projects.</p>
-					    <a href="#" class="btn btn-primary">Go somewhere</a>
+					    <h5 class="card-title text-warning">Gowns and Tuxedo Rental Web</h5>
+					    <p class="card-text">This project is ongoing and I'm using React and Tailwind CSS for the front-end and I'm planning to use Express JS and MongoDB for the backend.</p>
+					    <a href="https://sunflowergownsrental.vercel.app/" target="_blank" class="btn btn-primary">Check website</a>
 					  </div>
 					</div>
 				</div>
@@ -189,6 +189,7 @@
 			            <img  src="images/logo-heroku.png" class="col-6 img-fluid"/>
 			            <img  src="images/logo-git.png" class="col-6 img-fluid"/>
 			            <img  src="images/logo-postman.png" class="col-6 img-fluid"/>
+			            <img  src="images/logo-sublime-text-3.png" class="col-6 img-fluid"/>
 			            <img  src="images/logo-sublime-text-3.png" class="col-6 img-fluid"/>
 			        </div>
 			    </div>
