--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
-
+	<link rel="stylesheet" href="node_modules/animate.css/animate.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Protest+Riot&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+	
 
 	<link rel="stylesheet" type="text/css" href="./index.css">
 	<title>Full Stack Web Developer</title>
@@ -21,11 +22,11 @@
 
 		<!-- Start of navbar -->
 		<nav class="sticky-top navbar navbar-expand-lg navbar-light bg-white shadow py-1 container-fluid">
-		  <a class="navbar-brand px-2 px-md-4" href="#landing"><img src="./images/giovanni-logo-zip-file/png/logo-black.png"  class="img-fluid" width="100" alt=""></a>
+		  <a class="navbar-brand px-2 px-md-4" href="#landing"><img src="./images/giovanni-logo-zip-file/png/logo-black.png"  class="img-fluid" width="90" height="100" alt=""></a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
-		  <div class="collapse navbar-collapse text-center" id="navbarNavAltMarkup">
+		  <div class="navbar-collapse bg-white text-center" id="navbarNavAltMarkup">
 		    <div class="container-fluid navbar-nav d-flex justify-content-end" id="navBar">
 		      <a class="nav-link active ms-5" href="#landing">Home <span class="sr-only d-none">(current)</span></a>
 		      <a class="nav-link active ms-5" href="#about">About</a>
@@ -62,18 +63,18 @@
 							</a>
 							<a href="https://www.linkedin.com/in/giovanni-francisco-9216262a1/" target="_blank" class="rounded-circle">
 								<div class="vertical-align-center rounded-circle p-1">
-									<img  src="./images/linkedin-with-circle.svg"/>
+									<img  src="./images/linkedin-with-circle.svg" alt="linkedin"/>
 								</div>
 							</a>
 							<a href="https://github.com/gsmbabies28" target="_blank" class="rounded-circle">
 								<div class="vertical-align-center rounded-circle p-1">
-									<img  src="./images/github.svg"/>
+									<img  src="./images/github.svg" alt="github"/>
 								</div>
 							</a>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6 order-1 order-md-2">
+				<div class="col-md-6 order-1 order-md-2 animate__animated animate__backInDown">
 					<img src="./me.jpg" class="img-thumbnail rounded-circle w-50">
 				</div>
 			</div>
@@ -88,7 +89,7 @@
 
 			<h5 class="text-center mt-5">Hello there! I'm Giovanni C. Francisco, a passionate I.T. graduate embarking on an exciting journey into the world of web development.</h5>
 			
-			<div class="bg-info p-4 mt-5">
+			<div class="bg-info p-4 mt-5 animate__animated animate__slideInLeft">
 				<h2><strong>Education</strong></h2>
 				<hr>
 				<img src="./images/education.svg" alt="">
@@ -160,21 +161,23 @@
 		<!-- Start of Tools section  -->
 		<section id="tools" class="container-fluid text-center d-flex flex-column justify-content-center mt-5 h-auto">
 			<h1 class="text-center">Tools</h1>
-		    <div id="other-tools" class="row bg-light mx-auto mt-3 p-2">
+		    <div id="other-tools" class="row bg-white mx-auto mt-3 p-2">
 
 		    	<div class="col-lg-4">
 		    		<h2>Front End</h2>
 			        <div id="tools-1" class="row w-75 mx-auto">
-			            <img  src="images/logo-bootstrap.png" class="col-6 img-fluid"/>
-			            <img  src="images/logo-css3.png" class="col-6 img-fluid"/>
-			            <img  src="images/logo-javascript.png" class="col-6 img-fluid"/>
-			            <img  src="images/logo-html5.png" class="col-6 img-fluid"/>
+			            <img  src="images/logo-bootstrap.png" alt="bootstrap-logo" class="col-6 img-fluid"/>
+			            <img  src="images/logo-css3.png" alt="css-logo" class="col-6 img-fluid"/>
+			            <img  src="images/logo-javascript.png" alt="javascript-logo" class="col-6 img-fluid"/>
+			            <img  src="images/logo-html5.png" alt="html-logo" class="col-6 img-fluid"/>
+			            <img  src="images/tailwind.png" alt="html-logo" class="col-6 img-fluid"/>
+
 			        </div>
 			    </div>
 
 		    	<div class="col-lg-4">
 		    		<h2>Mern</h2>
-			        <div id="tools-1" class="row w-75 mx-auto">
+			        <div id="tools-2" class="row w-75 mx-auto">
 			            <img  src="images/logo-mongodb.png" class="col-6 img-fluid"/>
 			            <img  src="images/logo-nodejs.png" class="col-6 img-fluid"/>
 			            <img  src="images/logo-expressjs.png" class="col-6 img-fluid"/>
@@ -190,7 +193,7 @@
 			            <img  src="images/logo-git.png" class="col-6 img-fluid"/>
 			            <img  src="images/logo-postman.png" class="col-6 img-fluid"/>
 			            <img  src="images/logo-sublime-text-3.png" class="col-6 img-fluid"/>
-			            <img  src="images/logo-sublime-text-3.png" class="col-6 img-fluid"/>
+			            <img  src="images/visual-studio-code7642(1).png" class="col-6 img-fluid"/>
 			        </div>
 			    </div>
 
@@ -274,7 +277,7 @@
 	</main>
 	<!-- End of main section -->
 
-
+	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
